[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/Font/font5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Audio/cursLo.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/Audio/dialogue.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/Audio/cursHi.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/UI/LevelUp/LevelUpScreen.gd" type="Script" id=5]
[ext_resource path="res://assets/UI/LevelUp/LevelUp_Container.gd" type="Script" id=6]
[ext_resource path="res://assets/UI/LevelUp/LevelDescription.gd" type="Script" id=7]
[ext_resource path="res://assets/UI/LevelUp/Theme_LevelUpButton.tres" type="Theme" id=8]
[ext_resource path="res://assets/UI/LevelUp/Font_LevelUp_Button.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/UI/LevelUp/Pressed_StyleBoxTex_LevelUp_Button.tres" type="StyleBox" id=10]
[ext_resource path="res://assets/UI/LevelUp/Hover_StyleBoxTex_LevelUp_Button.tres" type="StyleBox" id=11]
[ext_resource path="res://assets/UI/Dialog/DialogBox_6x6.png" type="Texture" id=12]
[ext_resource path="res://assets/UI/Dialog/DialogBox_6x6_mono_fill.png" type="Texture" id=13]
[ext_resource path="res://assets/Audio/Player/Level_Up_Hit.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/Audio/Music/LevelUp.ogg" type="AudioStream" id=15]
[ext_resource path="res://assets/Shaders/LightBlueColor.shader" type="Shader" id=16]
[ext_resource path="res://assets/UI/LevelUp/StatPreview.gd" type="Script" id=17]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
extra_spacing_top = 1
extra_spacing_char = 1
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 2 )
Label/styles/normal = null

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 16 )
shader_param/active = true

[sub_resource type="Animation" id=7]
resource_name = "Off"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false ]
}

[node name="LevelUpScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.52588e-05
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -59.0 ],
"_edit_use_anchors_": false
}

[node name="PanelTop" type="Panel" parent="."]
anchor_right = 1.0
margin_top = -45.0
margin_bottom = 3.8147e-06
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBottom" type="Panel" parent="."]
anchor_right = 1.0
margin_top = 180.0
margin_bottom = 225.0
rect_min_size = Vector2( 0, 45 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsRect" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.0
margin_right = -6.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelUp_Rect" type="NinePatchRect" parent="OptionsRect"]
margin_left = 36.0
margin_top = 18.0
margin_right = 156.0
margin_bottom = 167.0
texture = ExtResource( 13 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelUp_Container" type="HBoxContainer" parent="OptionsRect/LevelUp_Rect"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="OptionsRect/LevelUp_Rect/LevelUp_Container"]
margin_left = 4.0
margin_right = 94.0
margin_bottom = 149.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 0
theme = ExtResource( 8 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonVIT" type="Button" parent="OptionsRect/LevelUp_Rect/LevelUp_Container/Options"]
modulate = Color( 0.8, 0.466667, 0, 1 )
margin_top = 3.0
margin_right = 90.0
margin_bottom = 20.0
mouse_filter = 2
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.219608, 0.219608, 0.219608, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
button_mask = 0
text = "WILLPOWER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonEND" type="Button" parent="OptionsRect/LevelUp_Rect/LevelUp_Container/Options"]
modulate = Color( 0.368627, 0.752941, 0.411765, 1 )
margin_top = 24.0
margin_right = 90.0
margin_bottom = 41.0
mouse_filter = 2
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.215686, 0.215686, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
button_mask = 0
text = "LUNG CAPACITY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDEF" type="Button" parent="OptionsRect/LevelUp_Rect/LevelUp_Container/Options"]
modulate = Color( 0.278431, 0.278431, 1, 1 )
margin_top = 45.0
margin_right = 90.0
margin_bottom = 62.0
mouse_filter = 2
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.215686, 0.215686, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
button_mask = 0
text = "RESILIENCE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSTR" type="Button" parent="OptionsRect/LevelUp_Rect/LevelUp_Container/Options"]
modulate = Color( 0.721569, 0.152941, 0.12549, 1 )
margin_top = 66.0
margin_right = 90.0
margin_bottom = 83.0
mouse_filter = 2
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.215686, 0.215686, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
button_mask = 0
text = "VIOLENT NATURE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDEX" type="Button" parent="OptionsRect/LevelUp_Rect/LevelUp_Container/Options"]
modulate = Color( 0.321569, 0.619608, 0.701961, 1 )
margin_top = 87.0
margin_right = 90.0
margin_bottom = 104.0
mouse_filter = 2
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.215686, 0.215686, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
button_mask = 0
text = "PATIENCE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSPD" type="Button" parent="OptionsRect/LevelUp_Rect/LevelUp_Container/Options"]
modulate = Color( 1, 1, 0.752941, 1 )
margin_top = 108.0
margin_right = 90.0
margin_bottom = 125.0
mouse_filter = 2
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.215686, 0.215686, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
button_mask = 0
text = "SWIFTNESS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMAG" type="Button" parent="OptionsRect/LevelUp_Rect/LevelUp_Container/Options"]
modulate = Color( 0.662745, 0, 1, 1 )
margin_top = 129.0
margin_right = 90.0
margin_bottom = 146.0
mouse_filter = 2
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.215686, 0.215686, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
button_mask = 0
text = "SPIRITUALITY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="VBoxContainer" parent="OptionsRect/LevelUp_Rect/LevelUp_Container"]
margin_left = 98.0
margin_right = 116.0
margin_bottom = 149.0
rect_min_size = Vector2( 18, 67 )
theme = SubResource( 3 )
custom_constants/separation = 4
alignment = 1

[node name="LabelVIT" type="Label" parent="OptionsRect/LevelUp_Rect/LevelUp_Container/Stats"]
margin_top = 3.0
margin_right = 18.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 17 )
text = "4"
align = 1
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelEND" type="Label" parent="OptionsRect/LevelUp_Rect/LevelUp_Container/Stats"]
margin_top = 24.0
margin_right = 18.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 17 )
text = "4"
align = 1
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelDEF" type="Label" parent="OptionsRect/LevelUp_Rect/LevelUp_Container/Stats"]
margin_top = 45.0
margin_right = 18.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 17 )
text = "4"
align = 1
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelSTR" type="Label" parent="OptionsRect/LevelUp_Rect/LevelUp_Container/Stats"]
margin_top = 66.0
margin_right = 18.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 17 )
text = "4"
align = 1
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelDEX" type="Label" parent="OptionsRect/LevelUp_Rect/LevelUp_Container/Stats"]
margin_top = 87.0
margin_right = 18.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 17 )
text = "4"
align = 1
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelSPD" type="Label" parent="OptionsRect/LevelUp_Rect/LevelUp_Container/Stats"]
margin_top = 108.0
margin_right = 18.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 17 )
text = "4"
align = 1
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMAG" type="Label" parent="OptionsRect/LevelUp_Rect/LevelUp_Container/Stats"]
margin_top = 129.0
margin_right = 18.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 17 )
text = "4"
align = 1
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioMenu" type="AudioStreamPlayer" parent="OptionsRect/LevelUp_Rect/LevelUp_Container"]
stream = ExtResource( 2 )

[node name="Tween" type="Tween" parent="OptionsRect/LevelUp_Rect/LevelUp_Container"]

[node name="LevelDescription" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 160.0
margin_top = 75.0
margin_right = 291.0
margin_bottom = 167.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="LevelDescription"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="RichTextLabel" type="RichTextLabel" parent="LevelDescription"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 2.0
margin_right = -6.0
margin_bottom = -2.0
custom_fonts/normal_font = SubResource( 4 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerText" type="Timer" parent="LevelDescription"]
wait_time = 0.001

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="LevelDescription"]

[node name="StatPreview" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 160.0
margin_top = 18.0
margin_right = 291.0
margin_bottom = 66.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="StatPreview"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StatPreview"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -4.0
margin_right = -4.0
margin_bottom = -4.0
rect_clip_content = true
size_flags_vertical = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="StatPreview/VBoxContainer"]
margin_right = 123.0
margin_bottom = 18.0
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 5 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="StatPreview/VBoxContainer"]
margin_top = 22.0
margin_right = 4.0
margin_bottom = 48.0
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="StatPreview/VBoxContainer/HBoxContainer"]
margin_right = 4.0
margin_bottom = 26.0
rect_min_size = Vector2( 4, 24 )
custom_constants/separation = 2

[node name="ColorRect1" type="ColorRect" parent="StatPreview/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 4.0
margin_bottom = 2.0
rect_min_size = Vector2( 1, 2 )
size_flags_horizontal = 3
color = Color( 0.8, 0.466667, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="StatPreview/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 4.0
margin_bottom = 6.0
rect_min_size = Vector2( 1, 2 )
size_flags_horizontal = 9
color = Color( 0.368627, 0.752941, 0.411765, 1 )

[node name="ColorRect3" type="ColorRect" parent="StatPreview/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 4.0
margin_bottom = 10.0
rect_min_size = Vector2( 1, 2 )
size_flags_horizontal = 9
color = Color( 0.278431, 0.278431, 1, 1 )

[node name="ColorRect4" type="ColorRect" parent="StatPreview/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 4.0
margin_bottom = 14.0
rect_min_size = Vector2( 1, 2 )
size_flags_horizontal = 9
color = Color( 0.721569, 0.152941, 0.12549, 1 )

[node name="ColorRect5" type="ColorRect" parent="StatPreview/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 4.0
margin_bottom = 18.0
rect_min_size = Vector2( 1, 2 )
size_flags_horizontal = 9
color = Color( 0.321569, 0.619608, 0.701961, 1 )

[node name="ColorRect6" type="ColorRect" parent="StatPreview/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 4.0
margin_bottom = 22.0
rect_min_size = Vector2( 1, 2 )
size_flags_horizontal = 9
color = Color( 1, 1, 0.752941, 1 )

[node name="ColorRect7" type="ColorRect" parent="StatPreview/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 4.0
margin_bottom = 26.0
rect_min_size = Vector2( 1, 2 )
size_flags_horizontal = 9
color = Color( 0.662745, 0, 1, 1 )

[node name="Tween" type="Tween" parent="StatPreview"]

[node name="LevelText" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -57.0
margin_top = -127.0
margin_right = 57.0
margin_bottom = -93.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="NinePatchRect" parent="LevelText"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="LevelText"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 2.0
margin_right = -1.99999
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelText"]
anims/Off = SubResource( 7 )
anims/On = SubResource( 8 )

[node name="TimerText" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="TimerDelaySelect" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AudioSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AudioMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="AudioLevel" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
autoplay = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Tween" type="Tween" parent="."]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonVIT" to="StatPreview" method="_on_Button_focus_entered" binds= [ Color( 0.8, 0.466667, 0, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonVIT" to="StatPreview" method="_on_ButtonVIT_focus_entered" binds= [ Color( 0.8, 0.466667, 0, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonVIT" to="LevelDescription" method="_on_ButtonVIT_focus_entered" binds= [ Color( 0.8, 0.466667, 0, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonVIT" to="OptionsRect/LevelUp_Rect/LevelUp_Container" method="_on_focus_entered"]
[connection signal="pressed" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonVIT" to="StatPreview" method="_on_ButtonVIT_pressed"]
[connection signal="pressed" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonVIT" to="OptionsRect/LevelUp_Rect/LevelUp_Container" method="_on_ButtonVIT_pressed"]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonEND" to="StatPreview" method="_on_Button_focus_entered" binds= [ Color( 0.368627, 0.752941, 0.411765, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonEND" to="StatPreview" method="_on_ButtonEND_focus_entered" binds= [ Color( 0.368627, 0.752941, 0.411765, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonEND" to="LevelDescription" method="_on_ButtonEND_focus_entered" binds= [ Color( 0.368627, 0.752941, 0.411765, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonEND" to="OptionsRect/LevelUp_Rect/LevelUp_Container" method="_on_focus_entered"]
[connection signal="pressed" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonEND" to="StatPreview" method="_on_ButtonEND_pressed"]
[connection signal="pressed" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonEND" to="OptionsRect/LevelUp_Rect/LevelUp_Container" method="_on_ButtonEND_pressed"]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonDEF" to="StatPreview" method="_on_Button_focus_entered" binds= [ Color( 0.278431, 0.278431, 1, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonDEF" to="StatPreview" method="_on_ButtonDEF_focus_entered" binds= [ Color( 0.278431, 0.278431, 1, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonDEF" to="LevelDescription" method="_on_ButtonDEF_focus_entered" binds= [ Color( 0.278431, 0.278431, 1, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonDEF" to="OptionsRect/LevelUp_Rect/LevelUp_Container" method="_on_focus_entered"]
[connection signal="pressed" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonDEF" to="StatPreview" method="_on_ButtonDEF_pressed"]
[connection signal="pressed" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonDEF" to="OptionsRect/LevelUp_Rect/LevelUp_Container" method="_on_ButtonDEF_pressed"]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonSTR" to="StatPreview" method="_on_Button_focus_entered" binds= [ Color( 0.721569, 0.152941, 0.12549, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonSTR" to="StatPreview" method="_on_ButtonSTR_focus_entered" binds= [ Color( 0.721569, 0.152941, 0.12549, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonSTR" to="LevelDescription" method="_on_ButtonSTR_focus_entered" binds= [ Color( 0.721569, 0.152941, 0.12549, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonSTR" to="OptionsRect/LevelUp_Rect/LevelUp_Container" method="_on_focus_entered"]
[connection signal="pressed" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonSTR" to="StatPreview" method="_on_ButtonSTR_pressed"]
[connection signal="pressed" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonSTR" to="OptionsRect/LevelUp_Rect/LevelUp_Container" method="_on_ButtonSTR_pressed"]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonDEX" to="StatPreview" method="_on_Button_focus_entered" binds= [ Color( 0.321569, 0.619608, 0.701961, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonDEX" to="StatPreview" method="_on_ButtonDEX_focus_entered" binds= [ Color( 0.321569, 0.619608, 0.701961, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonDEX" to="LevelDescription" method="_on_ButtonDEX_focus_entered" binds= [ Color( 0.321569, 0.619608, 0.701961, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonDEX" to="OptionsRect/LevelUp_Rect/LevelUp_Container" method="_on_focus_entered"]
[connection signal="pressed" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonDEX" to="StatPreview" method="_on_ButtonDEX_pressed"]
[connection signal="pressed" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonDEX" to="OptionsRect/LevelUp_Rect/LevelUp_Container" method="_on_ButtonDEX_pressed"]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonSPD" to="StatPreview" method="_on_Button_focus_entered" binds= [ Color( 1, 1, 0.752941, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonSPD" to="StatPreview" method="_on_ButtonSPD_focus_entered" binds= [ Color( 1, 1, 0.752941, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonSPD" to="LevelDescription" method="_on_ButtonSPD_focus_entered" binds= [ Color( 1, 1, 0.752941, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonSPD" to="OptionsRect/LevelUp_Rect/LevelUp_Container" method="_on_focus_entered"]
[connection signal="pressed" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonSPD" to="StatPreview" method="_on_ButtonSPD_pressed"]
[connection signal="pressed" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonSPD" to="OptionsRect/LevelUp_Rect/LevelUp_Container" method="_on_ButtonSPD_pressed"]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonMAG" to="StatPreview" method="_on_Button_focus_entered" binds= [ Color( 0.662745, 0, 1, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonMAG" to="StatPreview" method="_on_ButtonMAG_focus_entered" binds= [ Color( 0.662745, 0, 1, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonMAG" to="LevelDescription" method="_on_ButtonMAG_focus_entered" binds= [ Color( 0.662745, 0, 1, 1 ) ]]
[connection signal="focus_entered" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonMAG" to="OptionsRect/LevelUp_Rect/LevelUp_Container" method="_on_focus_entered"]
[connection signal="pressed" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonMAG" to="StatPreview" method="_on_ButtonMAG_pressed"]
[connection signal="pressed" from="OptionsRect/LevelUp_Rect/LevelUp_Container/Options/ButtonMAG" to="OptionsRect/LevelUp_Rect/LevelUp_Container" method="_on_ButtonMAG_pressed"]
[connection signal="timeout" from="LevelDescription/TimerText" to="LevelDescription" method="_on_TimerText_timeout"]
[connection signal="timeout" from="TimerText" to="." method="_on_TimerText_timeout"]
